# bluePrint

./: .gitignore  CMakeLists.txt  README.md  Roadmap.md  compile.sh  out
docs/: blueprints.md  build.js  concurrency.md  control-flow.md  examples.md  functions.md  index.html  index.md  memory.md  modules.md  package-lock.json  package.json  stdlib.md  syntax.md  types.md
docs/css/: code-block.css  style.css
docs/docs/: blueprints.md  concurrency.md  control-flow.md  examples.md  exceptions.md  functions.md  index.md  memory.md  modules.md  stdlib.md  syntax.md  types.md
docs/js/: code-block.js  main.js
examples/: README.md
src/: README.md  blueprint_grammar.txt  main.cpp
src/ast/: README.md  ast.h  ast.hpp  classAST.cpp  classAST.h  classAST.hpp  commonAST.h  commonAST.hpp  exprAST.cpp  exprAST.hpp  programAST.hpp  stmtAST.cpp  stmtAST.hpp
src/codegen/: CodeGenerator.cpp  CodeGenerator.hpp
src/lexer/: lexer.cpp  lexer.h  lexer.hpp  tokens.hpp
src/parser/: classParser.cpp  expressionparser.cpp  parser.cpp  parser.h  parser.hpp  statementParser.cpp  valueParsers.cpp
stdlib/collections/: ArrayList.bp  Collection.bpf  HashMap.bp  HashSet.bp  LinkedList.bp  List.bpf  Map.bpf  Queue.bpf  Set.bpf  Stack.bpf  bundle.manifest
stdlib/concurrent/: Mutex.bpf  Thread.bpf  bundle.manifest
stdlib/core/: bundle.manifest  core.bpf
stdlib/io/: AutoCloseable.bpf  DefaultLogger.bp  FileSystem.bpf  InputStream.bpf  Logger.bpf  OutputStream.bpf  System.bp  bundle.manifest
stdlib/math/: Calculator.bpf  Math.bpf  (+2 more)
test/: v0.1.0.bp  v0_demo.bp
tests/: README.md
(+18 files in other folders)
